3 урок с базой не разобрался, css доп страниц сделаю позде

--- a/mainapp/templates/base.html
+++ b/mainapp/templates/base.html
@@ -68,7 +68,7 @@
 				<div class="useful__link__two">
 					<ul class="other__link">
 					<li><a class="other__link__a" href="{% url 'main' %}">Architect accounts</a></li>
-					<li><a class="other__link__a" href="{% url 'main' %}">Careers</a></li>
+	<li><a class="other__link__a" href="{% url 'main' %}">Careers</a></li>
 					<li><a class="other__link__a" href="{% url 'main' %}">Exchanges & returns</a></li>
 					</ul>
 				</div>
@@ -91,7 +91,7 @@
 			<div class="copy">
 			<p class="footer__other__p">© Copyright - INTERIOR 2016. All Rights Reserved.</p>
 			</div>
-			<div class="social wow bounceInUp" data-wow-delay="0.2s">
+			<div class="social" data-wow-delay="0.2s">
 			<a class="social__a" href="{% url 'main' %}"><i class="fab fa-facebook-f"></i></a>
 			<a class="social__a" href="{% url 'main' %}"><i class="fab fa-twitter"></i></a>
 			<a class="social__a" href="{% url 'main' %}"><i class="fab fa-google-plus-g"></i></a>
