--- a/mainapp/templates/contact.html
+++ b/mainapp/templates/contact.html
@@ -3,17 +3,10 @@
 
 <body>
 {% block menu %}
-		<div class="slider padding__site">
+		<div class="slider padding__site style=">
 			<div class="header">
 			<a class="logo wow bounceInDown" data-wow-delay="0.2s" href="{% url 'main' %}"><img src="{% static 'img/logo.svg' %}" alt="logo"> </a>
-			<ul class="menu wow bounceInDown" data-wow-delay="0.2s">
-				<li><a href="{% url 'main' %}" class="menu__link__active">HOME</a></li>
-				<li><a href="{% url 'products' %}" class="menu__link">PRODUCTS</a></li>
-				<li><a href="{% url 'main' %}" class="menu__link">HISTORY</a></li>
-				<li><a href="{% url 'main' %}" class="menu__link">SHOWROOM</a></li>
-				<li><a href="{% url 'contact' %}" class="menu__link">CONTACT</a></li>
-				<li><a href="{% url 'main' %}" class="menu__link__icon"><i class="fas fa-search"></i></a></li>
-			</ul>
+				{% include 'includes/inc_menu.html' %}
 			<a href="{% url 'main' %}" class="menu__mini"><i class="fas fa-bars"></i></a>
 			</div>
 {% endblock %}
@@ -68,9 +61,6 @@
 				</div>
 			</div>
 		</div>
-
-		<div class="clr"></div>
-	</div>
-{% endblock %}
+			{% endblock %}
 </body>
 </html>
