--- a/mainapp/templates/includes/inc_menu.html
+++ b/mainapp/templates/includes/inc_menu.html
@@ -1,17 +1,8 @@
-<ul class="menu">
-    <li>
-        <a href="{% url 'main' %}" class="{% if request.resolver_match.url_name == 'main' %}active{% endif %}">
-            домой
-        </a>
-    </li>
-    <li>
-        <a href="{% url 'products' %}" class="{% if request.resolver_match.url_name == 'products' %}active{% endif %}">
-            продукты
-        </a>
-    </li>
-    <li>
-        <a href="{% url 'contact' %}" class="{% if request.resolver_match.url_name == 'contact' %}active{% endif %}">
-            контакты
-        </a>
-    </li>
+<ul class="menu wow bounceInDown" data-wow-delay="0.2s">
+    <li><a href="{% url 'main' %}" class="menu__link {% if request.resolver_match.url_name == 'main' %}menu__link__active{% endif %}">HOME</a></li>
+    <li><a href="{% url 'products:index' %}" class="menu__link {% if request.resolver_match.url_name == 'products' %}menu__link__active{% endif %}">PRODUCTS</a></li>
+    <li><a href="{% url 'history' %}" class="menu__link {% if request.resolver_match.url_name == 'history' %}menu__link__active{% endif %}">HISTORY</a></li>
+    <li><a href="{% url 'showroom' %}" class="menu__link {% if request.resolver_match.url_name == 'showroom' %}menu__link__active{% endif %}">SHOWROOM</a></li>
+    <li><a href="{% url 'contact' %}" class="menu__link {% if request.resolver_match.url_name == 'contact' %}menu__link__active{% endif %}">CONTACT</a></li>
+    <li><a href="{% url 'main' %}" class="menu__link__icon {% if request.resolver_match.url_name == 'search' %}menu__link__active{% endif %}"><i class="fas fa-search"></i></a></li>
 </ul>
