--- a/mainapp/templates/index.html
+++ b/mainapp/templates/index.html
@@ -4,21 +4,15 @@
 
 <body>
 {% block menu %}
-		<div class="slider padding__site">
+		<div class="slider padding__site style=" style="background-image: url(/static/img/slider-img.png)">
 			<div class="header">
 			<a class="logo wow bounceInDown" data-wow-delay="0.2s" href="{% url 'main' %}"><img src="{% static 'img/logo.svg' %}" alt="logo"> </a>
-			<ul class="menu wow bounceInDown" data-wow-delay="0.2s">
-				<li><a href="{% url 'main' %}" class="menu__link__active">HOME</a></li>
-				<li><a href="{% url 'products' %}" class="menu__link">PRODUCTS</a></li>
-				<li><a href="{% url 'main' %}" class="menu__link">HISTORY</a></li>
-				<li><a href="{% url 'main' %}" class="menu__link">SHOWROOM</a></li>
-				<li><a href="{% url 'contact' %}" class="menu__link">CONTACT</a></li>
-				<li><a href="{% url 'main' %}" class="menu__link__icon"><i class="fas fa-search"></i></a></li>
-			</ul>
+				{% include 'includes/inc_menu.html' %}
 			<a href="{% url 'main' %}" class="menu__mini"><i class="fas fa-bars"></i></a>
 			</div>
 {% endblock %}
 {% block content %}
+			<div class="backpic">
 			<div class="slider__content wow bounceInLeft" data-wow-delay="0.9s">
 				<div class="slider__trading">TRENDING</div>
 				<h2 class="slider__h2">Fishnet Chair</h2>
@@ -31,6 +25,7 @@
 				<a href="{% url 'main' %}" class="circle wow zoomOutUp" data-wow-delay="0.9s"></a>
 			</div>
 		</div>
+			</div>
 <div class="featured padding__site">
 			<ul class="menu__featured">
 				<li><a href="{% url 'main' %}" class="link__featured__active">Featured</a></li>
