--- a/mainapp/templates/products.html
+++ b/mainapp/templates/products.html
@@ -3,53 +3,36 @@
 
 <body>
 {% block menu %}
-		<div class="slider padding__site">
+		<div class="slider padding__site style=">
 			<div class="header">
 			<a class="logo wow bounceInDown" data-wow-delay="0.2s" href="{% url 'main' %}"><img src="{% static 'img/logo.svg' %}" alt="logo"> </a>
-			<ul class="menu wow bounceInDown" data-wow-delay="0.2s">
-				<li><a href="{% url 'main' %}" class="menu__link__active">HOME</a></li>
-				<li><a href="{% url 'products' %}" class="menu__link">PRODUCTS</a></li>
-				<li><a href="{% url 'main' %}" class="menu__link">HISTORY</a></li>
-				<li><a href="{% url 'main' %}" class="menu__link">SHOWROOM</a></li>
-				<li><a href="{% url 'contact' %}" class="menu__link">CONTACT</a></li>
-				<li><a href="{% url 'main' %}" class="menu__link__icon"><i class="fas fa-search"></i></a></li>
-			</ul>
+				{% include 'includes/inc_menu.html' %}
 			<a href="{% url 'main' %}" class="menu__mini"><i class="fas fa-bars"></i></a>
 			</div>
 {% endblock %}
 {% block content %}
-		<div class="hero-white">
-		<div class="details">
 			<div class="links clearfix">
-				<ul class="links-menu">
-					{% for link in links_name %}
-					<li><a href="##" class="active">все</a></li>
-					<li><a href="#">дом</a></li>
-					<li><a href="#">офис</a></li>
-					<li><a href="#">модерн</a></li>
-					<li><a href="#">классика</a></li>
-					{% endfor %}
-				</ul>
+				{% include 'includes/inc_categories_menu.html' %}
 			</div>
 
 			<div class="details-products">
 				<div class="details-slider">
 					<div class="slider-product">
-						<img src="img/slider1.jpg">
+						<img src="{% static 'img/slider1.jpg' %}">
 					</div>
 					<div class="slider-control">
 						<div class="block">
-							<a href="#"><img src="img/controll.jpg" alt="">
+							<a href="#"><img src="{% static 'img/controll.jpg' %}" alt="">
 								<div class="text"></div>
 							</a>
 						</div>
 						<div class="block">
-							<a href="#"><img src="img/controll1.jpg" alt="">
+							<a href="#"><img src="{% static 'img/controll1.jpg' %}" alt="">
 								<div class="text"></div>
 							</a>
 						</div>
 						<div class="block">
-							<a href="#"><img src="img/controll2.jpg" alt="">
+							<a href="#"><img src="{% static 'img/controll2.jpg' %}" alt="">
 								<div class="text"></div>
 							</a>
 						</div>
@@ -63,57 +46,13 @@
 					<a href="#" class="red-button">
 						заказать <i class="fa fa-chevron-right" aria-hidden="true"></i>
 					</a>
-					<div class="description-text">
-						<p>Расположитесь комфортно.</p>
-						<p>Отличное качество материалов
-						позволит вам это.</p>
-						<p>Различные цвета</p>
-						<p>высочайший уровень
 						эргономики и прочность.</p>
 					</div>
 				</div>
 			</div>
 
-			<div class="related">
-				<div class="title clearfix">
-					<h2>Похожие продукты</h2>
-					<a class="explore" href="#">показать все <img src="img/arrow.png" alt=""></a>
-				</div>
-				<div class="related-products clearfix">
-					<div class="block">
-						<a href="#"><img src="img/product-11.jpg" alt="">
-							<div class="text">
-								<img src="img/icon-hover.png" alt="img">
-								<h4>Стул повышенного качества</h4>
-								<p>Не оторваться. </p>
-							</div>
-						</a>
-					</div>
-					<div class="block">
-						<a href="#"><img src="img/product-21.jpg" alt="">
-							<div class="text">
-								<img src="img/icon-hover.png" alt="img">
-								<h4>Стул повышенного качества</h4>
-								<p>Не оторваться. </p>
-							</div>
-						</a>
-					</div>
-					<div class="block">
-						<a href="#"><img src="img/product-31.jpg" alt="">
-							<div class="text">
-								<img src="img/icon-hover.png" alt="img">
-								<h4>Стул повышенного качества</h4>
-								<p>Не оторваться. </p>
-							</div>
-						</a>
-					</div>
-
-				</div>
-			</div>
-
-		<div class="clr"></div>
-
-	</div>
 {% endblock %}
+
+
 </body>
 </html>
